Fix navbar icons misalignment

--- a/src/stylesheets/_navbar.scss
+++ b/src/stylesheets/_navbar.scss
@@ -117,6 +117,7 @@ $avatar-size: 40px;
 
   .navbar-icon {
     margin-left: 20px;
+    vertical-align: middle;
   }
 
   .mu-level-number {
